Create a service to manage music playback!
Notifies clients of metadata updates (technically).
Should keep running in background, but not forever (yet)
Doesn't do any well-behaved audio stuff, nor foreground stuff.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/activity_vertical_margin"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <Button
         android:id="@+id/button"
